--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
   },
   "homepage": "https://github.com/vshal-ch/pharmacy-management-system#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
